Fixes visible sidebar even if hidden is applied

--- a/core/css/apps.scss
+++ b/core/css/apps.scss
@@ -117,6 +117,9 @@ kbd {
 		width: 100%;
 		box-sizing: border-box;
 	}
+	&.hidden {
+		display: none;
+	}
 	&.without-app-settings {
 		padding-bottom: 0;
 	}
